frontend/test/should_pass/to_005.grg
using test_model_002;

rule to_5 {
	a : A;
    b : B;		
	if { 
		typeof(a) != typeof(b);
		typeof(a) != AB;
		typeof(b) < B; 
	}

	replace{
		a --> b; 
	}
}
