frontend/test/should_fail/exec_006.grg
using deep_model_001;

rule r(y : Acc) {
  hom(a,b);
  a : A;
  b : B;
  replace {
    c : AcccAccAcA<b>;
    exec(r(a));  // a may have been deleted iff a!=b
  }
}
